--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,24 +2,16 @@
 spring.application.name=tareas-api
 
 # Configuración do servidor
-server.port=8080
+server.port=9020
 
 # Configuración de recursos estáticos
 spring.web.resources.static-locations=classpath:/static/
 spring.mvc.static-path-pattern=/**
 
-# Configuración de H2 (base de datos en ficheiro)
-spring.datasource.url=jdbc:h2:file:./data/tareasdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
 
-# Consola H2 (accesíbel en http://localhost:8080/h2-console)
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
 # Configuración de JPA/Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -37,3 +29,7 @@ logging.level.org.springframework.web=INFO
 # Configuración de Actuator (para healthcheck)
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+spring.datasource.url=jdbc:postgresql://postgres:5432/tareas
+spring.datasource.username=postgres
+spring.datasource.password=postgres
